2008-08-04  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Add test case for "half" closed paths.
	[Bug #413461]

2007-10-30  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added IsVisible test cases on ellipses 
	(#325502)

2007-07-31  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added more test cases for Reverse based on the
	C test cases provided in #81859.

2007-07-30  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added more test cases for Reverse, the complex
	ones don't work yet (see #81859).

2007-03-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* TestMatrix.cs: Allow a small delta when comparing floats. This 
	allows the ARM to work properly (e.g. -9.999995 versus -10).

2006-09-26  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Added test case for Reverse (and found out that
	the types aren't reversed, only the points are).

2006-09-18	Boris Kirzner <borisk@mainsoft.com>

	* TestColorBlend.cs,TestHatchBrush.cs : marked tests not working
	for TARGET_JVM.

2006-08-16  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Ignore some test cases if we cannot get any 
	font family from GDI+.
	* TestHatchBrush.cs: Ignore some test cases if we cannot get any font
	family from GDI+. Update to NUnit 2.2+ and fix getOutSufix method

2006-06-09  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPathTest.cs: Added test cases for IsVisible methods.

2006-06-07  Sebastien Pouliot  <sebastien@ximian.com> 

	* GraphicsPathTest.cs: Added test cases for IsOutlineVisible methods.

2006-06-01  Sebastien Pouliot  <sebastien@ximian.com>

	* TestHatchBrush.cs: Some were surprisingly similar until...

2006-05-24  Sebastien Pouliot  <sebastien@ximian.com>

	* GraphicsPathTest.cs: Ignore some test cases that aren't implemented 
	in libgdiplus and have different results in MS 1.x/2.0 (or between
	different executions, yuck).
